--- a/index.html
+++ b/index.html
@@ -12,7 +12,14 @@
     Odin Tic-Tac-Toe
   </header>
   <main>
-
+    <div class="gameboard"></div>
+    <div class="controls">
+      <input type="text" id="player1-input" placeholder="Player 1 Name">
+      <input type="text" id="player2-input" placeholder="Player 2 Name">
+      <button id="start-button">Start Game</button>
+      <button id="restart-button">Restart Game</button>
+    </div>
+    <div id="result-display"></div>
   </main>
 </body>
 </html>
