--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
 </head>
 <body>
   <header>
-    Odin Tic-Tac-Toe
+    <h1>Odin Tic-Tac-Toe</h1>
   </header>
   <main>
     <div class="gameboard"></div>
     <div class="controls">
-      <input type="text" id="player1-input" placeholder="Player 1 Name">
-      <input type="text" id="player2-input" placeholder="Player 2 Name">
+      <input type="text" id="player1-input" placeholder="Player 1 Name" required>
+      <input type="text" id="player2-input" placeholder="Player 2 Name" required>
       <button id="start-button">Start Game</button>
       <button id="restart-button">Restart Game</button>
     </div>
