--- a/index.html
+++ b/index.html
@@ -14,10 +14,15 @@
   <main>
     <div class="gameboard"></div>
     <div class="controls">
-      <input type="text" id="player1-input" placeholder="Player 1 Name" required>
-      <input type="text" id="player2-input" placeholder="Player 2 Name" required>
-      <button id="start-button">Start Game</button>
-      <button id="restart-button">Restart Game</button>
+      <label for="">Player 1:</label>
+      <input type="text" id="player1-input" placeholder="Player 1 Name">
+      <label for="">Player 2: Leave empty to play against the computer</label>
+      <input type="text" id="player2-input" placeholder="Player 2 Name">
+      <div class="buttons">
+        <button id="start-button">Start Game</button>
+        <button id="restart-button">Restart Game</button>
+      </div>
+
     </div>
     <div id="result-display"></div>
   </main>
